[gd_scene load_steps=2 format=3 uid="uid://dg3prkfbiat22"]

[ext_resource type="Script" path="res://assetsNEW/scenes/menu_objects/buttons/fake_button.gd" id="1_spddc"]

[node name="FakeButton" type="Area2D"]
script = ExtResource("1_spddc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
